--- a/gumballs/ji_lee/wk3d1/memetube/views/new.erb
+++ b/gumballs/ji_lee/wk3d1/memetube/views/new.erb
@@ -11,7 +11,7 @@
     <label for="">Genre</label>
     <input type="text" name="genre"><br>
 
-    <button>Create</button>
+    <button class="btn btn-primary">Create</button>
   </form>
   
   <a href="/"><button class="btn btn-default">Home</button></a>
