--- a/gumballs/ji_lee/wk3d1/memetube/views/show.erb
+++ b/gumballs/ji_lee/wk3d1/memetube/views/show.erb
@@ -1,12 +1,23 @@
-<div class="container">
-  <h2>show details</h2>
+<div class="container center">
+  <h2 class="center">Show Video Details</h2>
 
-  <% @result.each do |row| %>
-  <p><%= row['title'] %></p>
-  <p><%= row['description'] %></p>
-  <p><%= row['genre'] %></p>
-  <a href="/videos/<%= row['id'] %>/edit"><button class="btn btn-primary">Edit</button></a>
+  <% @rows.each do |row| %>
+    <p><%= row['title'] %></p>
+    
+          <iframe width="450" height="315" src="<%= row['video_url'] %>" frameborder="0" allowfullscreen></iframe>
+
+    <p><%= row['description'] %></p>
+    <p><%= row['genre'] %></p>
+    
+    <div class="lateral">
+      <a href="/videos/<%= row['id'] %>/edit"><button class="btn btn-primary">Edit</button></a>
+    
+      <form action="/video/<%= row['id'] %>/delete" method="post">
+        <button class="btn btn-danger">Delete</button>
+      </form>
+
   <% end %>
-
-  <a href="/"><button class="btn btn-default">Home</button></a>
+  
+      <a href="/"><button class="btn btn-default">Home</button></a>
+    </div>
 </div>
