--- a/gumballs/joshua_richardson/wk2d4/forms/views/form.erb
+++ b/gumballs/joshua_richardson/wk2d4/forms/views/form.erb
@@ -15,7 +15,7 @@
 
       <div class="input-group">
         <label for="hotdog_count">How many hotdogs?</label>
-        <input type="number" name="hotdog_count" placeholder="75">
+        <input type="number" name="hotdog_cou" placeholder="75">
       </div>
 
       <div class="input-group">
