--- a/gumballs/jam_creencia/week2/wk2_day3/movies/views/index.erb
+++ b/gumballs/jam_creencia/week2/wk2_day3/movies/views/index.erb
@@ -1,21 +1,15 @@
 
-<div id="container">
-	<h1>WHAT IS IT ABOUT?</h1>
+<div class="container">
 
 	<form id="form" action="/results" method="get">
-		<label for="movie">What is</label>
-		<input type="search" name="search_movie" placeholder="this movie">
-		<label for="movie">about?</label>
-		<button>Find Out</button>
+		<label for="movie">WHAT IS </label>
+		<input type="search" name="search_movie" placeholder="<this movie>">
+		<label for="movie"> ABOUT?</label>
+		<button>find out.</button>
 
 	</form>
 
 
-	<h2><%= @title %> (<%= @year %>)</h2>
-
-	<p><%= @plot %></p>
-
-	<img src="<%= @poster %>">
 
 </div>
 
