--- a/gumballs/jam_creencia/week2/wk2_day3/movies/views/layout.erb
+++ b/gumballs/jam_creencia/week2/wk2_day3/movies/views/layout.erb
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Forms Demo</title>
-	<link rel="stylesheet" href="main.css">
-	<link href='http://fonts.googleapis.com/css?family=Rajdhani:300,400' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Gruppo' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="/main.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
