--- a/gumballs/jam_creencia/week2/wk2_day3/movies/public/main.css
+++ b/gumballs/jam_creencia/week2/wk2_day3/movies/public/main.css
@@ -1,30 +1,122 @@
 body {
-	background-image: url(wall4.png);
-	background-repeat: repeat;
+	background-image: url(bkg.jpg);
+	margin-top: 90px;
 }
 
-#container {
-	max-width: 500px;
-	max-height: 1000px;
+.container {
+	max-width: 700px;
+	max-height: 1200px;
 	margin: 0 auto;
 	text-align: center;
-	font-family: 'Gruppo', cursive;
-	font-weight: bold;
+	padding-top: 170px;
+
 }
 
 #form {
-	font-size: 24px;
+	width: 500px;
+	margin: 0 auto;
 }
 
-h1 {
-	font-family: 'Rajdhani', sans-serif;
-	font-size: 55px;
-	text-decoration: underline;
+label {
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 60px;
+}
 
+input {
+	background-color: transparent;
+	border-color: transparent;
+	border-bottom: solid;
+	text-align: center;
+	font-size: 40px;
+	max-width: 150px;
+	font-family: 'Open Sans Condensed', sans-serif;
+
+}
+
+
+input::-webkit-input-placeholder {
+  color: black;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 30px;
+  overflow: visible;
+
+}
+
+[placeholder]:focus::-webkit-input-placeholder { 
+  opacity: 0;
+}
+
+
+button {
+	background-color: transparent;
+	border-color: transparent;
+	font-family: 'IM Fell DW Pica', serif;
+	font-style: italic;
+	font-size: 20px;
+	padding-top: 20px;
 }
 
 img {
 	border: 5px double;
 	padding: 10px;
 
+}
+
+
+/*SEARCH LIST*/
+.search_container {
+	font-family: 'Open Sans Condensed', sans-serif;
+	text-align: center;
+	max-width: 450px;
+	margin: 70px 390px;
+	background-color: rgba(255,255,255,0.5);
+	padding: 20px 0px;
+}
+
+a {
+	color: black;
+	text-decoration: none;
+}
+
+a:visited { 
+   color: dimgray;
+}
+
+h3 {
+	font-size: 40px;
+	margin: 0 auto;
+}
+
+
+
+/*RESULTS PAGE*/
+
+.results_container {
+	max-width: 700px;
+	margin: 0 auto;
+	text-align: center;
+
+}
+
+.data {
+	font-family: 'Open Sans Condensed', sans-serif;
+	display: inline-block;
+	max-width: 300px;
+	vertical-align: top;
+	margin-top: 10%;
+	margin-right: 30px;
+}
+
+.poster {
+	max-width: 300px;	
+	display: inline-block;
+}
+
+.home {
+	margin-top: 40px;
+}
+
+h1 {
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 20px;
 }
