--- a/gumballs/robert_will/w2d3/public/css/style.css
+++ b/gumballs/robert_will/w2d3/public/css/style.css
@@ -71,10 +71,16 @@ ul.menu1,  ul.menu2 {
      list-style: none;
      text-align: left;
      padding: 0;
+     margin-left: 5px;
 }
 
 .foot {
      border-bottom: solid;
      border-top: dotted;
      padding: 10px;
+     margin-bottom: 50px;
+}
+
+h1 {
+     margin-top: 20px;
 }
