--- a/gumballs/ji_lee/wk3d1/memetube/public/stylesheets/main.css
+++ b/gumballs/ji_lee/wk3d1/memetube/public/stylesheets/main.css
@@ -30,7 +30,7 @@ a {
   font-size: 1.3em;
 }
 a:hover {
-  background-color: black;
+  background-color: #555;
 }
 .container {
   text-align: center;
@@ -41,9 +41,9 @@ a:hover {
   margin-top: 4em;
 }
 .btn-primary {
-  color: orange;
+  color: #fff;
   background-color: #222;
-  border: none; 
+  border: none;
 }
 .lateral {
   display: inline-block;
@@ -51,4 +51,7 @@ a:hover {
 .btn {
   display: inline-block;
   margin: 1em;
+}
+.show_container {
+  text-align: center;
 }
