--- a/gumballs/ji_lee/wk2d5/MTA Sinatra/public/main.css
+++ b/gumballs/ji_lee/wk2d5/MTA Sinatra/public/main.css
@@ -31,6 +31,9 @@ h1 {
   margin-bottom: 0.5em;
   font-family: 'Stardos Stencil', cursive;
 }
+h2 {
+  margin-bottom: 2em;
+}
 h3 {
   margin-bottom: 3em;
   margin-top: -1em;
@@ -48,12 +51,12 @@ footer {
 }
 
 .backboard {
-  background-color: rgba(1,1,1,0.5);
+  background-color: rgba(1,1,1,0.6);
   border-radius: 0.5em;
   padding-top: 2em;
   padding-bottom: 8em;
   margin: 3em 5em;
-  min-height: 35em;
+  min-height: 33em;
 }
 
 .btn-primary {
@@ -81,7 +84,12 @@ footer {
   border: #15213b;
   color: #fff;
 }
-
+.stops {
+  width: 70px;
+  height: 70px;
+  background-color: orange;
+  border-radius: 50%;
+}
 
 
 
