--- a/gumballs/ji_lee/wk2d5/MTA Sinatra/views/forms.erb
+++ b/gumballs/ji_lee/wk2d5/MTA Sinatra/views/forms.erb
@@ -7,8 +7,9 @@
   
     <div class="form-group inputs">
       <div class="input-group">
-        <label for="start_ln">entry line: </label>
+        <label for="start_ln"></label>
         <select name="start_ln" id="start_ln" class="form-control">
+          <option value="">entry line</option>
           <option value="n">N Line</option>
           <option value="l">L Line</option>
           <option value="s">6 Line</option>
@@ -18,8 +19,9 @@
 
     <div class="form-group inputs">
       <div class="input-group">
-        <label for="start_st">entry station: </label>
+        <label for="start_st"></label>
         <select name="start_st" id="start_st" class="form-control">
+          <option value="">entry station</option>
           <option value="ts">Time Square (N line)</option>
           <option value="34th">34th (N Line)</option>
           <option value="28th">28th (N Line)</option>
@@ -45,8 +47,9 @@
 
     <div class="form-group inputs"> 
       <div class="input-group">
-        <label for="exit_ln">exit Line: </label>
+        <label for="exit_ln"></label>
         <select name="exit_ln" id="exit_ln" class="form-control">
+          <option value="">exit line</option>
           <option value="n">N Line</option>
           <option value="l">L Line</option>
           <option value="s">6 Line</option>
@@ -56,8 +59,9 @@
 
     <div class="form-group inputs">
       <div class="input-group">
-        <label for="exit_st">exit station: </label>
+        <label for="exit_st"></label>
         <select name="exit_st" id="exit_st" class="form-control">
+          <option value="">exit station</option>
           <option value="ts">Time Square (N line)</option>
           <option value="34th">34th (N Line)</option>
           <option value="28th">28th (N Line)</option>
