--- a/gumballs/jam_creencia/week3/wk3_day1/memetube/public/stylesheets/main.css
+++ b/gumballs/jam_creencia/week3/wk3_day1/memetube/public/stylesheets/main.css
@@ -1,99 +1,179 @@
 body {
-	max-width: 100%;
-	background-color: lightsteelblue;
-	background-image: linear-gradient(90deg, transparent 50%, rgba(255,255,255,.5) 50%);
-	background-size: 50px 50px;
-
+	max-width: 100%;  /* 1200 */
+	background-image: url('/small_steps.png');
 
 }
 
-.container {
-	width:1200px;
+/*logo */
+.logo_container {
+	width: 100%;
+	text-align: center;
 	display: inline-block;
-	margin-left: 30px;
-
+	margin-top: 2%;
 }
+
+
+/*content*/
+
 
 
 .video_list {
-	background-color: lightsteelblue;
+	background-color: rgba(184,184,184,0.5);
 	display: inline-block;
-	width: 1000px;
-	margin-left: 90px;
+	width: 80%; /* 960px */
+	margin-left: 9.5%; /* 114px */
 	font-family: 'Raleway', sans-serif;
+	padding-bottom: 3%;
+	margin-bottom: 3.8%;
+	overflow: visible;
 }
 
-video {
-	display: inline;
-	width: 450px;
-	margin-left: 280px;
+
+.video_container {
+	text-align: center;
+	margin-left: -2%;
+}
+
+.all_vids_title{
+	text-align: left;
+	margin-left: 6%;
+	font-size: 1em;
+}
+
+.page_title {
+	width: 100%;
+	display: -webkit-box;
+	background-color: rgba(225,225,225,0.5);
+}
+
+.genre_title {
+	width: 92%;
+}
+
+.add_button {
+	margin-top: 1%;
+}
+
+.each_vid {
+	display: inline-block;
+	margin-left: 2%; /* 55px */
+	margin-top: 2.7%; /* 40px */
+
+}
+
+iframe {
+	display: inline-block;
+	padding:0.933%;
+	border: 2px solid rgba(96, 95, 95, 0.5);
+	
+
 }
 
 a {
-	font-size: 26px;
-	margin-top: 30px;
-	margin-bottom: 20px;
-	display: block;
+	font-size: 1.5em;
+	display: inline-block;
 	text-align: center;
 	color: rgb(64,64,64); 
+	margin: 0 auto;
+	text-decoration: none;
 
 }
 
 
 p {
-	font-size: 18px;
-	margin: 0 auto;
-	display: block;
+	font-size: 1em;
 	text-align: center;
 	color: rgb(64,64,64); 
 	font-family: 'Raleway', sans-serif;
+	margin: 0 auto;
 }
 
 #description {
-	font-size: 22px;
+	font-size: 1.2em;
 	margin: 0 auto;
-	display: block;
 	text-align: center;
 }
 
 
-h1, h3, h2{
-	font-size: 38px;
+h1, h3 {
+	font-size: 0.3em;
 	display: block;
 	text-align: center;
 	color: rgb(64,64,64); 
 	font-family: 'Raleway', sans-serif;
+
+}
+
+h2 {
+	font-size: 1.5em;
+	display: block;
+	text-align: center;
+	color: rgb(64,64,64); 
+	font-family: 'Raleway', sans-serif;
+}
+
+
+/*show page*/
+
+.show_container {
+	background-color: rgba(184,184,184,0.5);
+	width: 80%;
+	height: 60%;
+	margin: 0 auto;
+	padding: 10px;
 
 }
 
 .show_vid {
 	display: block;
-	margin: 0 auto;
+	margin-left: 5%;
+	padding-bottom: 3%;
 }
 
-.show_container p {
-	margin: 20px;
+.show_screen {
+	text-align: center;
 }
 
+.show_title {
+	font-size: 1.4em;
+}
 
-.edit {
+.edit, .add {
 	display: block;
 	text-align: center;
 	font-family: 'Raleway', sans-serif;
 
 }
 
-.show_container {
-	background-color: lightsteelblue;
-	width: 862px;
-	margin: 0 auto;
-
+form {
+	text-align: center;
+	padding-top: 20px;
 }
+
+input, select, textarea {
+	margin-bottom: 0.6%;
+}
+
+.btn {
+  -webkit-border-radius: 60;
+  -moz-border-radius: 60;
+  border-radius: 60px;
+  font-family: Arial;
+  color: #1f1e1f;
+  font-size: 16px;
+  background: rgb(202,223,51);
+  padding: 10px 20px 10px 20px;
+  border: solid #04151f 2px;
+  text-decoration: none;
+}
+
+
+
+/*genres list*/
 
 
 ul {
 	list-style-type: none;
-	/*background-color: yellow;*/
 	text-align: center;
 	display: inline-flex;
 	padding: 0;
@@ -102,7 +182,6 @@ ul {
 
 li a{
 	display: inline;
-	/*background-color: red;*/
 	margin-right: 20px;
 	font-family: 'Raleway', sans-serif;
 }
@@ -116,10 +195,15 @@ li a{
 	text-align: center;
 }
 
-.title {
-	margin-top: 50px;
-}
 
+
+/*Media Queries*/
+@media all and (min-width: 520px) and (max-width: 700px) {
+	.show_screen iframe {
+		width: 90%;
+	}
+
+}
 
 
 
