--- a/gumballs/jam_creencia/week3/wk3_day1/memetube/views/edit.erb
+++ b/gumballs/jam_creencia/week3/wk3_day1/memetube/views/edit.erb
@@ -1,17 +1,27 @@
 <h2>Edit Video</h2>
 
 <div class="edit">
-	<form action="/videos/<%= @row["id"]%>" method="post">
+	<form action="/videos/<%= @video.id %>" method="post">
 		<label for="">Name</label>
-		<input type="text" name="name" value="<%= @row["name"]%>"><br>
+		<input type="text" name="name" value="<%= @video.name %>" maxlength="30"><br>
 		<label for="">Video URL</label>
-		<input type="text" name="video_url" value="<%= @row["video_url"]%>"><br>
-		<label for="">Description</label>
-		<input type="text" name="description" value="<%= @row["description"]%>"id=""><br>
+		<input type="text" name="video_url" value="<%= @video.video_url %>"><br>
+		<label for="">Brief Description</label>
+		<input type="text" name="description" value="<%= @video.description %>" maxlength="30"><br>
 		<label for="">Genre</label>
-		<input type="text" name="genre" value="<%= @row["genre"]%>"><br>
+			<select name="genre">
+			<% @genres.each do |genre| %>  	
+				<% if @video.genre == genre %>
+			  	<option value="genre" selected ><%= genre %></option>
+			 	<% else %>
+			 		<option value="genre"><%= genre %></option>
+				<% end %>
+			<% end %>
+			  
+			
+			</select><br>
 	
-		<button>Update</button>
+		<button class="btn" >Update</button>
 	
 	</form>
 </div>
