--- a/gumballs/jam_creencia/week3/wk3_day1/memetube/views/new.erb
+++ b/gumballs/jam_creencia/week3/wk3_day1/memetube/views/new.erb
@@ -1,20 +1,28 @@
 <h2>Add Video</h2>
 
 
-<div class="edit">
-	<form action="/videos" method="post">
+<div class="add">
+	<form action="/videos/add_video" method="post">
 		<label for="">Name</label>
-		<input type="text" name="name" id=""><br>
+			<input type="text" name="name" maxlength="30"><br>
 		<label for="">Video URL</label>
-		<input type="text" name="video_url" id=""><br>
-		<label for="">Description</label>
-		<input type="text" name="description" id=""><br>
+			<input type="text" name="video_url" id=""><br>
+		<label for="">Brief Description</label>
+			<input type="text" name="description" maxlength="30"><br>
 		<label for="">Genre</label>
-		<input type="text" name="genre" id=""><br>
+			<select name="genre">
+				<option value="Comedy">Comedy</option>
+				<option value="Movies">Movies</option>
+				<option value="Music">Music</option>
+				<option value="Sports">Sports</option>
+				<option value="Tech">Tech</option>
+				<option value="Other">Other</option> -->
+			</select>
+		<br>
+		<button class="btn">Add</button>
 
-		<button>Add</button>
+		</form>
 </div>
 
 	
 
-</form>
