--- a/gumballs/ji_lee/wk3d3/movie_active_record/views/layout.erb
+++ b/gumballs/ji_lee/wk3d3/movie_active_record/views/layout.erb
@@ -2,25 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Memetube</title>
+  <title>Forms Demo</title>
+
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="stylesheets/main.css">
+  
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  
+  <link rel="stylesheet" href="main.css">
+
+
 </head>
+
 <body>
-<div class="wrapper">
-  <header class="left">
-    <h1>MemeTube</h1>
-  </header>
-</div>    
-
-
-      
-
+  
   <%= yield %>
 
-  <footer class="center">&copy: All rights reserved.</footer>
+  <footer class="right bottom">
+  </footer>
 
 
 </body>
