--- a/gumballs/ji_lee/wk3d2/memetube2(genre)/views/index.erb
+++ b/gumballs/ji_lee/wk3d2/memetube2(genre)/views/index.erb
@@ -3,12 +3,15 @@
   <a href="/videos/new"><button class="btn btn-lg btn-primary">ADD VIDEO</button></a>
 </div>
 
+
 <div class="container">
+
   <div id="genre">
     <a href="/">All</a>
-      <% @rows.each do |row| %>
-      <a href="/genre/<%= row['genre'] %>"><%= row['genre'] %></a>
-    <% end %> 
+      <% @genres.each do |row| %>
+        <a href="/genre/<%= row['genre'] %>"><%= row['genre'] %></a>
+      <% end %>
+
   </div>
 <!-- Single video contents -->
 <div class="single">
